Be sure to return the reflow status as complete in the case of invalid markup to avoid a hang due to the frame being reflowed over and over again. Patch by steve.swanson@mackichan.com, b=323737, r+sr=rbs