layout/mathml/base/src/nsMathMLmrootFrame.cpp
@@ -210,7 +210,10 @@ nsMathMLmrootFrame::Reflow(nsPresContext*          aPresContext,
   if (2 != count) {
     // report an error, encourage people to get their markups in order
     NS_WARNING("invalid markup");
-    return ReflowError(renderingContext, aDesiredSize);
+    rv = ReflowError(renderingContext, aDesiredSize);
+    aStatus = NS_FRAME_COMPLETE;
+    NS_FRAME_SET_TRUNCATION(aStatus, aReflowState, aDesiredSize);
+    return rv;
   }
 
   ////////////
